# pppChess

./: .gitignore  CMakeLists.txt  README.md
include/core/: App.h  App.hpp  BoardObserver.hpp  Context.hpp  StateManager.hpp
include/game_logic/: Board.h  Board.hpp  ChessGame.hpp  Piece.h  Piece.hpp
include/states/: GameState.hpp  MenuState.hpp  SettingsState.hpp  State.hpp
include/ui/components/: Button.hpp  Component.hpp  Container.hpp  Label.hpp  Panel.hpp  RoundedRect.hpp
include/ui/core/: Resource.hpp  ResourceManager.hpp  SoundPlayer.hpp
include/ui/views/: BoardView.hpp  PieceView.hpp
src/: main.cpp
src/core/: App.cpp  App.hpp  BoardObserver.hpp  Context.hpp  LayoutManager.cpp  LayoutManager.hpp  StateManager.cpp  StateManager.hpp
src/engine/: ChessBot.cpp  ChessBot.hpp
src/game_logic/: Board.cpp  Board.hpp  ChessGame.cpp  ChessGame.hpp  Piece.cpp  Piece.hpp
src/game_logic/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/player/: BotPlayer.cpp  BotPlayer.hpp  LocalPlayer.hpp  Player.hpp  RemotePlayer.cpp  RemotePlayer.hpp
src/states/: GameState.cpp  GameState.hpp  MenuState.cpp  MenuState.hpp  SettingsState.cpp  SettingsState.hpp
src/ui/components/: Button.cpp  Button.hpp  CheckBox.hpp  Component.cpp  Component.hpp  Container.cpp  Label.cpp  Panel.cpp  RoundedRect.cpp  RoundedRect.hpp  Slider.cpp  Slider.hpp  TextPrompt.cpp  TextPrompt.hpp
src/ui/core/: Resource.hpp  ResourceManager.hpp  SoundPlayer.hpp
src/ui/views/: BoardView.cpp  BoardView.hpp  PieceView.cpp  PieceView.hpp
